ACC-2634 rewrite JOOQContext in JOOQThunkExpressionVisitor